# AES-Brute-Force

./: .gitattributes  .gitignore  AGENTS.md  README.md  pyproject.toml  requirements.txt  run.bat  run.sh
.github/workflows/: ci.yml
docs/: Bao_cao_de_an_AES_Brute_Force.docx  aes_core_walkthrough.md  aes_theory_notes.md
src/: __init__.py  aes_engine.py  benchmark.py  brute_force.py  gui.py  main.py
src/aes_brute_force/: __init__.py  __main__.py
src/aes_brute_force/benchmark/: __init__.py  runner.py
src/aes_brute_force/cli/: app.py
src/aes_brute_force/core/: __init__.py  aes_engine.py  brute_force.py  constants.py
src/aes_brute_force/gui/: __init__.py  app.py  theme.py
src/aes_brute_force/gui/tabs/: __init__.py  attack_tab.py  encrypt_tab.py  theory_tab.py
src/aes_brute_force/gui/widgets/: stat_card.py
src/aes_brute_force/utils/: logging.py
tests/: test_aes.py  test_aes_v2.py  test_false_positive_fix.py
